test media queries

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <!--    HAPPY HOUR
    +++++++++++++++++++++-->
     <section id="quisommesnous" class="happy_hour_section">
-        <div class="container">
-            <div class="row">
+        <div class="container container_happy_hour">
+            <div class="row row_happy_hour">
                 <div class="col-md-6 happy_our_img">
                 </div>
                 <div class="col-md-6 happy_hour_titre">
@@ -180,7 +180,7 @@
 
                 <div class="col-md-12 menu">
                     <ul id="menu-deroulant">
-                        <li><a href="#monancre"><img src="/ressources/images/avis1.jpg" alt=""> </a>
+                        <li><a href="#monancre"><img src="ressources/images/avis1.jpg" alt=""> </a>
                             <ul>
                                 <a href="#mon_ancre">
                                     <div class="commentaire1">
@@ -191,7 +191,7 @@
                             </ul>
                         </li>
 
-                        <li><a href=""><img src="/ressources/images/avis3.jpg" alt=""></a>
+                        <li><a href=""><img src="ressources/images/avis3.jpg" alt=""></a>
                             <ul>
                                 <a href="#mon_ancre">
                                     <div class="commentaire2">
@@ -203,7 +203,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href=""><img src="/ressources/images/avis4.jpg" alt=""></a>
+                            <a href=""><img src="ressources/images/avis4.jpg" alt=""></a>
                             <ul>
                                 <a href="#mon_ancre">
                                     <div class="commentaire3">
@@ -215,7 +215,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href=""><img src="/ressources/images/avis5.jpg" alt=""></a>
+                            <a href=""><img src="ressources/images/avis5.jpg" alt=""></a>
                             <ul>
                                 <a href="#mon_ancre">
                                     <div class="commentaire4">
@@ -227,7 +227,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href=""><img src="/ressources/images/avis6.jpg" alt=""></a>
+                            <a href=""><img src="ressources/images/avis6.jpg" alt=""></a>
                             <ul>
                                 <a href="#mon_ancre">
                                     <div class="commentaire5">
@@ -255,7 +255,7 @@
             <div class="row contactez_nous_full">
 
                 <div class="col-md-6 map_google mapwrapper">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1391.570345582717!2d4.8328853575095065!3d45.76837060585615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eafe85357a6b%3A0xfb794a4146a635ee!2sL&#39;Abreuvoir!5e0!3m2!1sfr!2sfr!4v1589461275276!5m2!1sfr!2sfr" width="500" height="400" frameborder="0" style="border:;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1391.570345582717!2d4.8328853575095065!3d45.76837060585615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eafe85357a6b%3A0xfb794a4146a635ee!2sL&#39;Abreuvoir!5e0!3m2!1sfr!2sfr!4v1589461275276!5m2!1sfr!2sfr" width="500" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                 <form action="">
                     <div class="col-md-6">
@@ -301,7 +301,7 @@
         <div class="container contact-full">
             <div class="row contact-menu-title">
                 <div class="col-md-3 menu-titre-contact">
-                    <img src="/ressources/images/t%C3%A9l%C3%A9chargement.jpg" height="40px" alt=""><a href="#">L'abreuvoir</a>
+                    <img src="ressources/images/t%C3%A9l%C3%A9chargement.jpg" height="40px" alt=""><a href="#">L'abreuvoir</a>
                 </div>
                 <div class="col-md-2 ">
                     <a href="#">Chez-nous</a>
